2005-04-21  Petr Ovtchenkov  <ptr@island...>

	* test/unit/sstream_test.cpp, fstream_test.cpp: integral type for
        ptrdiff_t shorter than for streamsize; this cause problem on
	Win32 platform, that support files larger 4GB.
	Thanks Timothy Tenebekov for report.

2005-04-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_debug.c: Small Borland compiler fix to avoid call to
	vsnprintf before version 0x550 thanks esanfo.
	
	* src/dll_main.cpp: Fix bug reported by Intel C++ (icl) compiler.
	
2005-04-20  Petr Ovtchenkov  <ptr@island...>

	* src/num_get_float.c: use uint64_t for 64-bit, but unsigned long long
	for constants. This fix problem on linux x86_64 [amd64].

2005-04-16  Francois Dumont  <dums@stlport...>

	* test/unit/cppunit/test_main.cpp: Patch from Michael Fink to improve
	the macro filter for including windows.h (UNDER_CE rather than WIN32).

	* build/test/unit/STATUS: Update from Michael Fink and myself.


	* build/Makefiles/nmake: Apply Michael Fink patch to generate .pdb file
	even in release mode and to install them in bin and lib folders next to
	the .dll and .lib files.

	* stlport/stl/_algobase.c: Add missing const in return type of the const 
	version of find specialized for const char*.

2005-04-16  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_algobase.c: memchr return NULL if value not found,
	while find() [specializtion for char *] should return last
	[see record 2005-02-27 below]. Thanks Joshua Berne for report.

	* test/unit/find_test.cpp: if char not found, char specialization of
	find() should return last, not NULL.

2005-04-14  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_list.h, _slist.h: add this-> resolution to get_allocator
	[required in the member templates to resolve possible ambiguity]

2005-04-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h, _slist.h: Add missing get_allocator() call when
	building temporary list or slist instances in insert methods.
