@@ -1,3 +1,12 @@
+2005-04-21  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/_hashtable.h: Extend the hashtable template methods extension
+	to the method computing the bucket from the key thanks Dominik Siatkowski.
+	
+	* stlport/stl/_threads.h: Disable 64 bits portability warning for MSVC compilers
+	MSVC do not see that the called function comes from a macro that is different
+	under Win32 and Win64.
+	
 2005-04-21  Petr Ovtchenkov  <ptr@island...>
 
 	* test/unit/sstream_test.cpp, fstream_test.cpp: integral type for
@@ -23,7 +32,6 @@
 	the macro filter for including windows.h (UNDER_CE rather than WIN32).
 
 	* build/test/unit/STATUS: Update from Michael Fink and myself.
-
 
 	* build/Makefiles/nmake: Apply Michael Fink patch to generate .pdb file
 	even in release mode and to install them in bin and lib folders next to
